exports[`Kinopoisk fetches cinema info for given arguments 1`] = `
Object {
  "address": "String",
  "homepage": "String",
  "id": "Number",
  "location": Object {
    "lat": "Number",
    "lng": "Number",
  },
  "name": "String",
  "phoneNumbers": "Array<Object>",
  "showtimes": "Array<Object>",
}
`;

exports[`Kinopoisk fetches cinema info for given arguments 2`] = `
Object {
  "filmId": "Number",
  "items": "Array<Object>",
}
`;

exports[`Kinopoisk fetches cinema info for given arguments 3`] = `
Object {
  "date": "String",
  "formats": "Array<String>",
  "time": "String",
  "timestamp": "Date",
}
`;

exports[`Kinopoisk fetches cinemas for a given city id 1`] = `
Object {
  "address": "String",
  "id": "Number",
  "location": Object {
    "lat": "Number",
    "lng": "Number",
  },
  "name": "String",
}
`;

exports[`Kinopoisk fetches movie credits for a given id 1`] = `
Object {
  "cast": "Array<Object>",
  "crew": Object {
    "cinematographers": "Array<Object>",
    "composers": "Array<Object>",
    "directors": "Array<Object>",
    "producers": "Array<Object>",
    "writers": "Array<Object>",
  },
}
`;

exports[`Kinopoisk fetches movie credits for a given id 2`] = `
Object {
  "name": "String",
  "photoUrl": "String",
}
`;

exports[`Kinopoisk fetches movie gallery for a given id 1`] = `
Object {
  "behindTheScenes": "Array<String>",
  "posters": "Array<String>",
  "stills": "Array<String>",
}
`;

exports[`Kinopoisk fetches movie info for a given id 1`] = `
Object {
  "ageRating": "Number",
  "genres": "Array<String>",
  "imdbRating": "Number",
  "imdbRatingVoteCount": "Number",
  "kpId": "Number",
  "kpRating": "Number",
  "kpRatingVoteCount": "Number",
  "mpaaRating": "String",
  "originalTitle": "String",
  "posterUrl": "String",
  "productionCountries": "Array<String>",
  "rtCriticsRating": "Number",
  "rtCriticsRatingVoteCount": "Number",
  "runtime": "Number",
  "stills": "Array<String>",
  "synopsis": "String",
  "title": "String",
  "year": "Number",
}
`;

exports[`Kinopoisk fetches similar movies for a given id 1`] = `
Object {
  "genres": "Array<String>",
  "kpId": "Number",
  "kpRating": "Number",
  "kpRatingVoteCount": "Number",
  "originalTitle": "String",
  "posterUrl": "String",
  "productionCountries": "Array<String>",
  "runtime": "Number",
  "title": "String",
  "year": "Number",
}
`;

exports[`Kinopoisk fetches supported cities for a given country id 1`] = `
Object {
  "id": "Number",
  "name": "String",
}
`;

exports[`Kinopoisk fetches supported countries 1`] = `
Object {
  "id": "Number",
  "name": "String",
}
`;

exports[`Kinopoisk finds best movie id for a given query 1`] = `714888`;

exports[`Kinopoisk finds best tv show id for a given query 1`] = `464963`;

exports[`Kinopoisk formats cinema info response according to graphql query 1`] = `
Object {
  "id": "Number",
  "name": "String",
  "showtimes": "Array<Object>",
}
`;

exports[`Kinopoisk formats cinema info response according to graphql query 2`] = `
Object {
  "timestamp": "Date",
}
`;

exports[`Kinopoisk formats movie credits response according to graphql query 1`] = `
Object {
  "name": "String",
  "photoUrl": "String",
}
`;

exports[`Kinopoisk formats movie credits response according to graphql query 2`] = `
Object {
  "name": "String",
  "photoUrl": "String",
}
`;

exports[`Kinopoisk formats movie gallery response according to graphql query 1`] = `
Object {
  "posters": "Array<String>",
  "stills": "Array<String>",
}
`;

exports[`Kinopoisk formats movie info response according to graphql query 1`] = `
Object {
  "kpId": "Number",
  "synopsis": "String",
  "title": "String",
}
`;

exports[`Kinopoisk formats similar movies response according to graphql query 1`] = `
Object {
  "kpId": "Number",
  "title": "String",
}
`;
